element directive injected into todo.html

--- a/templates/Todo.html
+++ b/templates/Todo.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div todo-table></div>
+    <todo-table></todo-table>
    <table class="table">
     <thead>
         <tr>
